tests/baselines/reference/classAbstractExtends.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractExtends.ts(9,7): error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'bar' from class 'B'.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractExtends.ts (1 errors) ====
    class A {
        foo() {}
    }
    
    abstract class B extends A {
        abstract bar();
    }
    
    class C extends B { }
          ~
!!! error TS2515: Non-abstract class 'C' does not implement inherited abstract member 'bar' from class 'B'.
    
    abstract class D extends B {}
    
    class E extends B {
        bar() {}
    }